--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -1,8 +1,17 @@
-<link rel="stylesheet" href="navbar.css">
+<link rel="stylesheet" href="../../assets/css/navbar.css">
 <nav>
-    <ul>
-        <li><a href="index.html">Trang Chủ</a></li>
-        <li><a href="about.html">Giới Thiệu</a></li>
-        <li><a href="contact.html">Liên Hệ</a></li>
-    </ul>
+    <div>
+        <div>
+
+        </div>
+        <h1 class="" id="logoHome">Pathway</h1>
+
+        <ul>
+            <li><a href="index.html">Trang Chủ</a></li>
+            <li><a href="about.html">Giới Thiệu</a></li>
+            <li><a href="contact.html">Liên Hệ</a></li>
+        </ul>
+    </div>
+  
+   
 </nav>
