--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,6 +3,10 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+#body {
+    font-family: 'Syne', sans-serif;
+}
 h1 {
     font-size: xx-large;
 }
