--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/assets/css/navbar.css">
+<!-- <link rel="stylesheet" href="/assets/css/navbar.css"> -->
 <nav>
     <div>
         <div>
