--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,13 +1,19 @@
 nav {
-    background-color: #333;
-    padding: 10px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    /* background: gray; */
+    width: 100%; /* Ensure it spans the full width */
+    padding: 10px 100px;
+    text-align: center;
 }
 
 nav ul {
     list-style-type: none;
+    display: flex;
+    justify-content: flex-end; /* Aligns the list to the right */
     margin: 0;
     padding: 0;
-    display: flex;
 }
 
 nav ul li {
@@ -15,10 +21,24 @@ nav ul li {
 }
 
 nav ul li a {
-    color: white;
+    color: black; /* Improved contrast */
     text-decoration: none;
+    transition: color 0.3s; /* Smooth color transition */
 }
 
 nav ul li a:hover {
     text-decoration: underline;
+    color: #ccc; /* Change color on hover for better visibility */
+}
+
+.navTravel {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* Center vertically */
+}
+
+.navLogo {
+    display: flex;
+    cursor: pointer;
+    align-items: center;
 }
