--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -1,15 +1,21 @@
 <nav>
-    <div>
-        <div>
-
+    <div class="navTravel">
+        <div class="navLogo">
+            <img src="/assets/icons/logo.svg" alt="">
+            <h3 class="" id="logoHome">Pathway</h3>
         </div>
-        <h1 class="" id="logoHome">Pathway</h1>
 
         <ul>
-            <li><a href="index.html">Trang Chủ</a></li>
-            <li><a href="about.html">Giới Thiệu</a></li>
-            <li><a href="contact.html">Liên Hệ</a></li>
+            <li><a href="index.html">Destinations</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Blog</a></li>
+            <li><a href="contact.html">Page</a></li>
         </ul>
+
+        <div>
+            <button>Login</button>
+            <button>Signup</button>
+        </div>
     </div>
   
    
