--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav>
     <div class="navTravel">
         <div class="navLogo">
-            <img src="/assets/icons/logo.svg" alt="">
+            <img src="/Travel-Guide-Website/assets/icons/logo.svg" alt="">
             <h3 class="" id="logoHome">Pathway</h3>
         </div>
 
